--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,17 @@
             "@testing-library/react": "^13.4.0",
             "@testing-library/user-event": "^13.5.0",
             "@tippyjs/react": "^4.2.6",
+            "axios": "^1.1.3",
             "chart.js": "^3.9.1",
             "react": "^18.2.0",
             "react-chartjs-2": "^4.3.1",
             "react-dom": "^18.2.0",
+            "react-redux": "^8.0.5",
             "react-router-dom": "^6.4.1",
             "react-scripts": "5.0.1",
+            "redux": "^4.2.0",
+            "redux-devtools-extension": "^2.13.9",
+            "redux-thunk": "^2.4.1",
             "sass": "^1.55.0",
             "web-vitals": "^2.1.4"
       },
@@ -42,6 +47,7 @@
                   "last 1 safari version"
             ]
       },
+      "proxy": "http://0.0.0.0:8000/api",
       "devDependencies": {
             "tailwindcss": "^3.1.8"
       }
