connect mongo atlas

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,9 @@
 NODE_ENV=development
 PORT=8000
 
-DATABASE=mongodb://localhost:27017/nodejs
+DATABASE_LOCAL=mongodb://localhost:27017/face-recognition
+DATABASE_PASSWORD=GgLYZ3uEv70JkuvG
+DATABASE=mongodb+srv://theeleven:<password>@face.cly0nzp.mongodb.net/?retryWrites=true&w=majority
 
 JWT_SECRET=
 JWT_EXPIRES_IN=90d
