--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
             "@tippyjs/react": "^4.2.6",
             "axios": "^1.1.3",
             "chart.js": "^3.9.1",
+            "http-proxy-middleware": "^2.0.6",
             "react": "^18.2.0",
             "react-chartjs-2": "^4.3.1",
             "react-dom": "^18.2.0",
@@ -47,7 +48,6 @@
                   "last 1 safari version"
             ]
       },
-      "proxy": "http://0.0.0.0:8000/api",
       "devDependencies": {
             "tailwindcss": "^3.1.8"
       }
