--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
             "@tippyjs/react": "^4.2.6",
             "axios": "^1.1.3",
             "chart.js": "^3.9.1",
+            "date-and-time": "^2.4.1",
             "http-proxy-middleware": "^2.0.6",
             "react": "^18.2.0",
             "react-chartjs-2": "^4.3.1",
