--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
       "dependencies": {
             "@emotion/react": "^11.10.5",
             "@emotion/styled": "^11.10.5",
-            "@fortawesome/free-solid-svg-icons": "^6.2.0",
+            "@fortawesome/free-solid-svg-icons": "^6.3.0",
             "@fortawesome/react-fontawesome": "^0.2.0",
             "@mui/material": "^5.11.3",
             "@testing-library/jest-dom": "^5.16.5",
@@ -22,6 +22,8 @@
             "react-redux": "^8.0.5",
             "react-router-dom": "^6.4.1",
             "react-scripts": "5.0.1",
+            "react-select": "^5.7.0",
+            "react-webcam": "^7.0.1",
             "redux": "^4.2.0",
             "redux-devtools-extension": "^2.13.9",
             "redux-thunk": "^2.4.1",
