--- a/backend/package.json
+++ b/backend/package.json
@@ -29,7 +29,8 @@
     "multer": "^1.4.5-lts.1",
     "nock": "^13.3.0",
     "node-pre-gyp": "^0.17.0",
-    "nodemailer": "^6.7.8"
+    "nodemailer": "^6.7.8",
+    "socket.io": "^4.6.1"
   },
   "devDependencies": {
     "html-webpack-plugin": "^5.5.0",
