--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,10 +31,11 @@
         "redux-thunk": "^2.4.1",
         "sass": "^1.55.0",
         "snake-case": "^3.0.4",
+        "socket.io-client": "^4.6.1",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
-        "start": "react-scripts start",
+        "start": "react-scripts --openssl-legacy-provider start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
