update camera and building

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
         "react-router-dom": "^6.4.1",
         "react-scripts": "5.0.1",
         "react-select": "^5.7.0",
+        "react-spinners": "^0.13.8",
         "react-toastify": "^9.1.1",
         "react-webcam": "^7.0.1",
         "redux": "^4.2.0",
@@ -36,11 +37,11 @@
     },
     "scripts": {
         "start": "react-scripts --openssl-legacy-provider start",
+        "start:phat": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
-    "proxy": "http://localhost:8000/",
     "eslintConfig": {
         "extends": [
             "react-app",
