--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,12 +36,13 @@
         "web-vitals": "^2.1.4"
     },
     "scripts": {
-        "start": "react-scripts --openssl-legacy-provider start",
+        "start": "react-scripts start",
         "start:phat": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
+    "proxy": "http://localhost:8000",
     "eslintConfig": {
         "extends": [
             "react-app",
